# alice-spotify

./: .env.example  README.md  main.py  pyproject.toml
src/: chooser.py  response.py
src/handlers/: __init__.py  current_song.py  not_found.py  play_song.py  welcome.py
src/middleware/: __init__.py  available_device.py  content_type.py
tests/: conftest.py  test_chooser.py  utils.py
tests/dialogs_requests/: base_request.py
tests/handlers/: conftest.py  test_current_song.py
tests/spotify_responses/: current_user_playing_track.py
